--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/AppTheme">
 
 
-        <receiver android:name="com.kiristudio.jh.d_day.ddayProvider">
+        <receiver android:name="com.kiristudio.jh.d_day.ddayProvider"
+            android:exported="true">
 
 
             <intent-filter>
@@ -27,7 +28,8 @@
 
         </receiver>
 
-        <receiver android:name="com.kiristudio.jh.d_day.ddayProvider2">
+        <receiver android:name="com.kiristudio.jh.d_day.ddayProvider2"
+            android:exported="true">
 
 
             <intent-filter>
@@ -40,7 +42,8 @@
 
         </receiver>
 
-        <receiver android:name="com.kiristudio.jh.d_day.ddayProvider3">
+        <receiver android:name="com.kiristudio.jh.d_day.ddayProvider3"
+            android:exported="true">
 
 
             <intent-filter>
@@ -53,7 +56,8 @@
 
         </receiver>
 
-        <receiver android:name="com.kiristudio.jh.d_day.ddayProvider4">
+        <receiver android:name="com.kiristudio.jh.d_day.ddayProvider4"
+            android:exported="true">
 
 
             <intent-filter>
@@ -66,7 +70,8 @@
 
         </receiver>
 
-        <receiver android:name="com.kiristudio.jh.d_day.dateReceiver">
+        <receiver android:name="com.kiristudio.jh.d_day.dateReceiver"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.ACTION_DATE_CHANGED">
                 </action>
@@ -84,7 +89,8 @@
 
         <activity
             android:name=".StandActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -105,7 +111,8 @@
             >
 
         </activity>
-        <activity android:name=".selectActivity">
+        <activity android:name=".selectActivity"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
@@ -114,7 +121,8 @@
             >
 
         </activity>
-        <activity android:name=".selectActivity2">
+        <activity android:name=".selectActivity2"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
@@ -124,7 +132,8 @@
 
         </activity>
 
-        <activity android:name=".selectActivity3">
+        <activity android:name=".selectActivity3"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
@@ -134,7 +143,8 @@
 
         </activity>
 
-        <activity android:name=".selectActivity4">
+        <activity android:name=".selectActivity4"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
